--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,8 @@
 [package]
-name = "sea-orm-reversible-migrtion-test"
+name = "assert-migrator-is-reversible"
 version = "0.1.0"
 edition = "2021"
 
 [dependencies]
 sea-orm-migration = { version = "^0.9.0", features = [ "runtime-tokio-rustls", "sqlx-sqlite" ] }
+tokio = { version = "^1.21.2", features = ["rt", "macros"] }
