--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,15 @@
 name = "assert-migrator-is-reversible"
 version = "0.1.0"
 edition = "2021"
+license = "MIT"
+description = "For testing if Sea Orm Migrators are reversible"
+keywords = ["database", "testing", "test", "sea-orm", "sea_orm"]
+categories = ["database", "development-tools::testing"]
+authors = ["josephlenton@gmail.com <josephlenton@gmail.com>"]
+repository = "https://github.com/JosephLenton/assert-migrator-is-reversible"
+readme = "https://github.com/JosephLenton/assert-migrator-is-reversible#readme"
+license-file = "https://github.com/JosephLenton/assert-migrator-is-reversible/blob/main/LICENSE"
+documentation = "docs.rs/assert-migrator-is-reversible/latest/assert-migrator-is-reversible"
 
 [dependencies]
 sea-orm-migration = { version = "^0.9.0", features = [ "runtime-tokio-rustls", "sqlx-sqlite" ] }
