--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,4 +14,4 @@ documentation = "docs.rs/assert-migrator-is-reversible/latest/assert-migrator-is
 
 [dependencies]
 sea-orm-migration = { version = "^0.9.0", features = [ "runtime-tokio-rustls", "sqlx-sqlite" ] }
-tokio = { version = "^1.21.2", features = ["rt", "macros"] }
+tokio = { version = "^1.21.2", features = ["rt"] }
