feat: add test for successful migrator

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,9 +9,12 @@ categories = ["database", "development-tools::testing"]
 authors = ["josephlenton@gmail.com <josephlenton@gmail.com>"]
 repository = "https://github.com/JosephLenton/assert-migrator-is-reversible"
 readme = "https://github.com/JosephLenton/assert-migrator-is-reversible#readme"
-license-file = "https://github.com/JosephLenton/assert-migrator-is-reversible/blob/main/LICENSE"
 documentation = "docs.rs/assert-migrator-is-reversible/latest/assert-migrator-is-reversible"
+
+[features]
+default = ["tokio"]
+tokio = ["dep:tokio"]
 
 [dependencies]
 sea-orm-migration = { version = "^0.9.0", features = [ "runtime-tokio-rustls", "sqlx-sqlite" ] }
-tokio = { version = "^1.21.2", features = ["rt"] }
+tokio = { version = "^1.21.2", features = ["rt", "time"], optional = true }
