--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,3 +18,6 @@ tokio = ["dep:tokio"]
 [dependencies]
 sea-orm-migration = { version = "^0.9.0", features = [ "runtime-tokio-rustls", "sqlx-sqlite" ] }
 tokio = { version = "^1.21.2", features = ["rt", "time"], optional = true }
+
+[dev-dependencies]
+panic-message = "0.3.0"
