--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,7 @@ categories = ["database", "development-tools::testing"]
 authors = ["josephlenton@gmail.com <josephlenton@gmail.com>"]
 repository = "https://github.com/JosephLenton/assert-migrator-reversible"
 readme = "README.md"
-documentation = "docs.rs/assert-migrator-reversible/latest/assert-migrator-reversible"
+documentation = "https://docs.rs/assert-migrator-reversible/latest/assert-migrator-reversible"
 
 [features]
 default = ["tokio"]
