--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,11 +12,21 @@ readme = "README.md"
 documentation = "https://docs.rs/assert-migrator-reversible/latest/assert-migrator-reversible"
 
 [features]
-default = ["tokio"]
+default = ["tokio", "sqlx-sqlite", "runtime-tokio-native-tls"]
 tokio = ["dep:tokio"]
 
+sqlx-mysql = ["sea-orm-migration/sqlx-mysql"]
+sqlx-postgres = ["sea-orm-migration/sqlx-postgres"]
+sqlx-sqlite = ["sea-orm-migration/sqlx-sqlite"]
+runtime-actix-native-tls = ["sea-orm-migration/runtime-actix-native-tls"]
+runtime-async-std-native-tls = ["sea-orm-migration/runtime-async-std-native-tls"]
+runtime-tokio-native-tls = ["sea-orm-migration/runtime-tokio-native-tls"]
+runtime-actix-rustls = ["sea-orm-migration/runtime-actix-rustls"]
+runtime-async-std-rustls = ["sea-orm-migration/runtime-async-std-rustls"]
+runtime-tokio-rustls = ["sea-orm-migration/runtime-tokio-rustls"]
+
 [dependencies]
-sea-orm-migration = { version = "^0.9.0", features = [ "runtime-tokio-rustls", "sqlx-sqlite" ] }
+sea-orm-migration = { version = "^0.9.0", default-features = false }
 tokio = { version = "^1.21.2", features = ["rt", "time"], optional = true }
 
 [dev-dependencies]
